objects/amc__Tax_Rate__c.object
<CustomObject>
    <description>Enables users to specify the Tax Rates relevant to their business operations.</description>
    <fields>
        <fullName>amc__Amount_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Amount’ label at the top of the detail section on the PDF Template</inlineHelpText>
        <label>Amount Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Paid_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Amount Paid’ label on the PDF Template</inlineHelpText>
        <label>Amount Paid Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Balance_Due_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Balance Due’ label on the PDF Template</inlineHelpText>
        <label>Balance Due Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Business_Number__c</fullName>
        <inlineHelpText>Identifies the Business Number of the business unit that will raise this invoice / credit note</inlineHelpText>
        <label>Business Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__City__c</fullName>
        <inlineHelpText>Identifies the City of the business unit that will raise this invoice / credit note</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Company_Name__c</fullName>
        <inlineHelpText>Identifies the name of the business unit that will raise this invoice / credit note</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Country__c</fullName>
        <inlineHelpText>Identifies the Country of the business unit that will raise this invoice / credit note</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Credit_Header_Text__c</fullName>
        <inlineHelpText>Identifies the title of the PDF for a Credit Note</inlineHelpText>
        <label>Credit Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Currency_Code__c</fullName>
        <inlineHelpText>Identifies the international currency code for this currency (e.g. AUD, USD)</inlineHelpText>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Currency_Symbol__c</fullName>
        <inlineHelpText>Identifies the symbol used for the currency (e.g. $ or £)</inlineHelpText>
        <label>Currency Symbol</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Currency__c</fullName>
        <inlineHelpText>Identifies the name of the currency the tax rate relates to (e.g. Australian Dollar)</inlineHelpText>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Custom_Footer_Field_1__c</fullName>
        <inlineHelpText>Enter the API Name of the Custom Field you would like to display</inlineHelpText>
        <label>Custom Footer Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Custom_Header_Field_1_Label__c</fullName>
        <inlineHelpText>Enter the Label to be used with Custom Header Field 1</inlineHelpText>
        <label>Custom Header Field 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Custom_Header_Field_1__c</fullName>
        <inlineHelpText>Enter the API Name of the Custom Field you would like to display</inlineHelpText>
        <label>Custom Header Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Custom_Header_Field_2_Label__c</fullName>
        <inlineHelpText>Enter the Label to be used with Custom Header Field 2</inlineHelpText>
        <label>Custom Header Field 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Custom_Header_Field_2__c</fullName>
        <inlineHelpText>Enter the API Name of the Custom Field you would like to display</inlineHelpText>
        <label>Custom Header Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Date_Format__c</fullName>
        <description>Enter the date format to be used in billing for items using this tax rate. Date format should be entered in Java simple date format such as dd/MM/yyyy or MM/dd/yyyy. If the time zone cannot be determined, the running Users locale is used.</description>
        <inlineHelpText>Enter the date format to be used in billing for items using this tax rate. Date format should be entered in Java simple date format such as dd/MM/yyyy or MM/dd/yyyy. If the time zone cannot be determined, the running Users locale is used.</inlineHelpText>
        <label>Date Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tax Rate is to be used as the default tax rate</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Description_Field__c</fullName>
        <inlineHelpText>If you wish to hide this field, please enter Hidden. If you wish to replace the standard field, please enter the API Name of the Custom Field you wish to use</inlineHelpText>
        <label>Description Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Description_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Description’ label on the PDF Template</inlineHelpText>
        <label>Description Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Due_Date_Field__c</fullName>
        <inlineHelpText>If you wish to hide this field, please enter Hidden. If you wish to replace the standard field, please enter the API Name of the Custom Field you wish to use</inlineHelpText>
        <label>Due Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Due_Date_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Due Date’ label on the PDF Template</inlineHelpText>
        <label>Due Date Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Exc_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Exc’ label at the top of the detail section on the PDF Template</inlineHelpText>
        <label>Exc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Date_Field__c</fullName>
        <inlineHelpText>If you wish to hide this field, please enter Hidden. If you wish to replace the standard field, please enter the API Name of the Custom Field you wish to use</inlineHelpText>
        <label>Invoice Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Date_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Invoice Date’ label on the PDF Template</inlineHelpText>
        <label>Invoice Date Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Field__c</fullName>
        <inlineHelpText>If you wish to hide this field, please enter Hidden. If you wish to replace the standard field, please enter the API Name of the Custom Field you wish to use</inlineHelpText>
        <label>Invoice # Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Footer_Notes__c</fullName>
        <inlineHelpText>Identifies the text to be included in the footer notes for invoices / credit notes raised by this business unit</inlineHelpText>
        <label>Invoice Footer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Header_Text__c</fullName>
        <inlineHelpText>Identifies the title of the PDF for an Invoice</inlineHelpText>
        <label>Invoice Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Invoice #’ label on the PDF Template</inlineHelpText>
        <label>Invoice # Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Logo_Id__c</fullName>
        <inlineHelpText>Identifies the Id of the Logo (stored in SFDC Documents) that will be used for this business unit</inlineHelpText>
        <label>Logo Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Logo_Width__c</fullName>
        <inlineHelpText>How wide the supplied logo should be on the document.</inlineHelpText>
        <label>Logo Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__PO_Field__c</fullName>
        <inlineHelpText>If you wish to hide this field, please enter Hidden. If you wish to replace the standard field, please enter the API Name of the Custom Field you wish to use</inlineHelpText>
        <label>PO # Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__PO_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘PO #’ label on the PDF Template</inlineHelpText>
        <label>PO # Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Plus_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Plus’ label on the PDF Template</inlineHelpText>
        <label>Plus Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Postcode__c</fullName>
        <inlineHelpText>Identifies the Postcode of the business unit that will raise this invoice / credit note</inlineHelpText>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__State__c</fullName>
        <inlineHelpText>Identifies the State of the business unit that will raise this invoice / credit note</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Street__c</fullName>
        <inlineHelpText>Identifies the Street address of the business unit that will raise this invoice / credit note</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Sub_Total_Exc_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Sub-Total Exc label on the PDF Template</inlineHelpText>
        <label>Sub-Total Exc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Summary_Field__c</fullName>
        <inlineHelpText>If you wish to hide this field, please enter Hidden. If you wish to replace the standard field, please enter the API Name of the Custom Field you wish to use</inlineHelpText>
        <label>Summary Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Summary_Label__c</fullName>
        <description>Can be used to override the ‘Summary’ label on the PDF Template</description>
        <inlineHelpText>Can be used to override the ‘Summary’ label on the PDF Template</inlineHelpText>
        <label>Summary Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Label__c</fullName>
        <inlineHelpText>Identifies the label for this tax record that will be used on invoices (e.g. GST)</inlineHelpText>
        <label>Tax Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Rate__c</fullName>
        <inlineHelpText>Identifies the Tax Rate for this currency (e.g. 10.00%)</inlineHelpText>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Total_Inc_Label__c</fullName>
        <inlineHelpText>Can be used to override the ‘Total Inc’ label on the PDF Template</inlineHelpText>
        <label>Total Inc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tax Rate</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>